# Qt-5-and-OpenCV-4-Computer-Vision-Projects

Chapter-01/ImageViewer/: CMakeLists.txt  build-by-cmake.sh  main.cpp  mainwindow.cpp  mainwindow.h
